--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 <body> 
 
     <ul>
-        <li><a class="active" href="Home">Home</a></li>
-        <li><a class="active" href="Contato">Contato</a></li>
-        <li><a class="active" href="Suporte">Suporte</a></li>
+        <li><a class="active" href="">Home</a></li>
+        <li><a class="active" href="">Contato</a></li>
         <li><a class="active" href="Login.html">Login</a></li>
     </ul>
 
@@ -77,6 +76,8 @@
             <h3> R$281,00</h3>
             <h4> 3.157 Hoteis</h4>
         </div>
+
+
         <div class="fotos">
             <h3>São Paulo</h3>
             <img src="São Paulo.jpg">
